--- a/src/main/resources/eshop.properties
+++ b/src/main/resources/eshop.properties
@@ -7,5 +7,5 @@ ftp.server.http.prefix=http://img.eshop.com/
 
 alipay.callback.url=http://www.happymmall.com/order/alipay_callback.do
 
-password.salt = sdfgsd/sd.fg/.sdfgds/f.g/
+password.salt = sd!!@NB#MJHKJASD?!?///2.123@#
 
