--- a/src/main/resources/eshop.properties
+++ b/src/main/resources/eshop.properties
@@ -5,7 +5,7 @@ ftp.pass=a7826950
 ftp.server.http.prefix=http://img.eshop.com/
 
 
-alipay.callback.url=http://cqya4a.natappfree.cc/order/alipay_callback.do
+alipay.callback.url=http://jd5zvz.natappfree.cc/order/alipay_callback.do
 
 password.salt = sd!!@NB#MJHKJASD?!?///2.123@#
 
