--- a/src/main/resources/eshop.properties
+++ b/src/main/resources/eshop.properties
@@ -5,7 +5,33 @@ ftp.pass=a7826950
 ftp.server.http.prefix=http://img.eshop.com/
 
 
-alipay.callback.url=http://jd5zvz.natappfree.cc/order/alipay_callback.do
+alipay.callback.url=http://zws7ut.natappfree.cc/order/alipay_callback.do
 
 password.salt = sd!!@NB#MJHKJASD?!?///2.123@#
 
+#redis config start
+
+redis.ip=127.0.0.1
+redis.port=6379
+
+redis2.ip=127.0.0.1
+redis2.port=6380
+
+
+#最大连接数
+redis.max.total=20
+
+#最大空闲数
+redis.max.idle=10
+
+#最小空闲数
+redis.min.idle=2
+
+#从jedis连接池获取连接时，校验并返回可用的连接
+redis.test.borrow=true
+
+#把连接放回jedis连接池时，校验并返回可用的连接
+redis.test.return=false
+
+
+#redis config end
