--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -20,12 +20,21 @@
     <filter-name>characterEncodingFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+  <!--<filter>-->
+    <!--<filter-name>sessionExpireFilter</filter-name>-->
+    <!--<filter-clcom.eshop.controller.common.SessionExpireFilterlter</filter-class>-->
+  <!--</filter>-->
+  <!--<filter-mapping>-->
+    <!--<filter-name>sessionExpireFilter</filter-name>-->
+    <!--<url-pattern>*.do</url-pattern>-->
+  <!--</filter-mapping>-->
+  
   <filter>
-    <filter-name>sessionExpireFilter</filter-name>
-    <filter-class>com.eshop.common.SessionExpireFilter</filter-class>
+    <filter-name>springSessionRespositoryFilter</filter-name>
+    <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
   </filter>
   <filter-mapping>
-    <filter-name>sessionExpireFilter</filter-name>
+    <filter-name>springSessionRespositoryFilter</filter-name>
     <url-pattern>*.do</url-pattern>
   </filter-mapping>
 
