--- a/src/main/resources/eshop.properties
+++ b/src/main/resources/eshop.properties
@@ -35,3 +35,12 @@ redis.test.return=false
 
 
 #redis config end
+
+#closeOrderTaskTime start
+
+close.order.task.time.hour=2
+
+#毫秒数
+lock.timeout=5000
+
+#closeOrderTaskTime end
